[package]
name = "dpoll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = "1.35.0"
tokio-modbus = { version = "0.9.0", default_features = true, features = ["rtu-sync", "tcp-sync"] }
tokio-serial = "5.4.4"
futures = "0.3.29"
ctrlc = "3.4.1"
# tracing = "0.1.40"
# tracing-subscriber = "0.3.18"
# tracing-log = "0.2.0"
clap-verbosity-flag = "2.1.0"
lazy_static = "1.4.0"
env_logger = "0.10.1"
colored = "2.1.0"
