[package]
name = "dpoll"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = "1.35.0"
tokio-modbus = { git = "https://github.com/niceda/tokio-modbus", branch = "main", version = "*", default-features = true, features = [
  "tcp-server",
  "tcp",
  "rtu",
  "rtu-over-tcp",
] }
tokio-iecp5 = { git = "https://github.com/niceda/tokio-iecp5.git", branch = "main" }
tokio-serial = "5.4.4"
futures = "0.3.30"
ctrlc = "3.4.1"
clap-verbosity-flag = "2.1.0"
lazy_static = "1.4.0"
env_logger = "0.11"
log = "0.4.20"
colored = "2.1.0"
